--- a/libs/stack/stack-ui/package.json
+++ b/libs/stack/stack-ui/package.json
@@ -53,6 +53,8 @@
     "tailwind-variants": "^0.1.19",
     "usehooks-ts": "^2.9.1",
     "@react-aria/accordion": "^3.0.0-alpha.27",
-    "react-use": "17.4.2"
+    "react-use": "17.4.2",
+    "next": "^14.0.4",
+    "unlazy": "^0.10.2"
   }
 }
