--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "private": true,
   "dependencies": {
     "@graphql-codegen/cli": "^5.0.2",
-    "@nx/next": "17.2.6",
+    "@nx/next": "18.2.4",
     "@react-aria/accordion": "^3.0.0-alpha.27",
     "@react-aria/focus": "^3.16.0",
     "@react-aria/i18n": "^3.10.0",
@@ -33,7 +33,7 @@
     "graphql-request": "^6.1.0",
     "isomorphic-dompurify": "1.13.0",
     "lodash.isequal": "4.5.0",
-    "next": "^14.0.4",
+    "next": "14.0.4",
     "radash": "11.0.0",
     "react": "^18.2.0",
     "react-aria": "^3.32.0",
@@ -57,17 +57,17 @@
     "@commitlint/cli": "18.4.3",
     "@commitlint/config-conventional": "18.4.3",
     "@graphql-eslint/eslint-plugin": "^3.20.1",
-    "@nx/cypress": "17.2.6",
-    "@nx/eslint-plugin": "17.2.6",
-    "@nx/jest": "17.3.0",
-    "@nx/js": "17.3.0",
-    "@nx/linter": "17.2.6",
-    "@nx/node": "^17.3.0",
-    "@nx/react": "17.2.6",
-    "@nx/rollup": "17.2.6",
-    "@nx/storybook": "17.2.6",
-    "@nx/vite": "17.2.6",
-    "@nx/workspace": "17.2.6",
+    "@nx/cypress": "18.2.4",
+    "@nx/eslint-plugin": "18.2.4",
+    "@nx/jest": "18.2.4",
+    "@nx/js": "18.2.4",
+    "@nx/linter": "18.2.4",
+    "@nx/node": "18.2.4",
+    "@nx/react": "18.2.4",
+    "@nx/rollup": "18.2.4",
+    "@nx/storybook": "18.2.4",
+    "@nx/vite": "18.2.4",
+    "@nx/workspace": "18.2.4",
     "@rollup/plugin-url": "^8.0.2",
     "@storybook/addon-essentials": "^7.6.6",
     "@storybook/addon-interactions": "^7.6.6",
@@ -79,7 +79,7 @@
     "@storybook/test-runner": "^0.16.0",
     "@storybook/testing-library": "^0.2.2",
     "@svgr/rollup": "^8.1.0",
-    "@swc-node/register": "~1.6.7",
+    "@swc-node/register": "~1.8.0",
     "@swc/cli": "~0.1.63",
     "@swc/core": "1.3.101",
     "@tailwindcss/line-clamp": "^0.4.4",
@@ -87,18 +87,18 @@
     "@theunderscorer/nx-semantic-release": "^2.8.0",
     "@types/jest": "^29.5.11",
     "@types/lodash.isequal": "4.5.8",
-    "@types/node": "20.10.5",
+    "@types/node": "18.16.9",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.18",
-    "@typescript-eslint/eslint-plugin": "6.15.0",
-    "@typescript-eslint/parser": "6.15.0",
+    "@typescript-eslint/eslint-plugin": "7.7.0",
+    "@typescript-eslint/parser": "7.7.0",
     "@vitejs/plugin-react": "4.2.1",
-    "@vitest/coverage-v8": "~0.34.6",
-    "@vitest/ui": "1.1.0",
+    "@vitest/coverage-v8": "1.5.0",
+    "@vitest/ui": "1.5.0",
     "autoprefixer": "10.4.16",
     "babel-jest": "^29.7.0",
-    "cypress": "^13.6.1",
-    "eslint": "8.56.0",
+    "cypress": "^13.6.6",
+    "eslint": "8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "17.1.0",
     "eslint-config-next": "^14.0.4",
@@ -122,8 +122,8 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jsdom": "~23.0.1",
-    "nx": "17.2.6",
-    "nx-cloud": "16.5.2",
+    "nx": "18.2.4",
+    "nx-cloud": "18.0.0",
     "postcss": "8.4.32",
     "prettier": "^3.1.1",
     "swc-loader": "0.2.3",
@@ -131,12 +131,12 @@
     "tailwindcss-logical": "^3.0.1",
     "ts-jest": "^29.1.1",
     "ts-node": "10.9.2",
-    "typescript": "5.3.3",
+    "typescript": "5.4.5",
     "verdaccio": "^5.29.0",
     "vite": "^5.0.10",
     "vite-plugin-dts": "~2.3.0",
     "vite-tsconfig-paths": "^4.2.2",
-    "vitest": ">=0.34.6"
+    "vitest": "1.5.0"
   },
   "nx": {
     "includedScripts": []
