--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tanstack/react-query": "^5.17.1",
     "@tsed/exceptions": "^7.52.0",
     "dequal": "^2.0.3",
+    "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
     "isomorphic-dompurify": "1.13.0",
     "lodash.isequal": "4.5.0",
@@ -52,6 +53,8 @@
     "yarn": "^1.22.21"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@commitlint/cli": "18.4.3",
     "@commitlint/config-conventional": "18.4.3",
     "@graphql-eslint/eslint-plugin": "^3.20.1",
@@ -88,8 +91,8 @@
     "@types/jest": "^29.5.11",
     "@types/lodash.isequal": "4.5.8",
     "@types/node": "20.10.5",
-    "@types/react": "18.2.45",
-    "@types/react-dom": "18.2.18",
+    "@types/react": "18.2.33",
+    "@types/react-dom": "18.2.14",
     "@typescript-eslint/eslint-plugin": "6.15.0",
     "@typescript-eslint/parser": "6.15.0",
     "@vitejs/plugin-react": "4.2.1",
