--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "nx-cloud": "16.5.2",
     "postcss": "8.4.32",
     "prettier": "^3.1.1",
+    "slugify": "1.6.6",
     "swc-loader": "0.2.3",
     "tailwindcss": "3.4.0",
     "tailwindcss-logical": "^3.0.1",
