--- a/libs/stack/stack-ui/package.json
+++ b/libs/stack/stack-ui/package.json
@@ -57,6 +57,8 @@
     "@react-types/radio": "3.8.5",
     "@react-types/shared": "^3.26.0",
     "@react-types/tabs": "3.3.11",
+    "@tanstack/react-query": "^5.62.7",
+    "next": "^14.2.20",
     "radashi": "^12.3.0",
     "react": "18.3.1",
     "react-aria": "^3.36.0",
