--- a/libs/stack/next-component/package.json
+++ b/libs/stack/next-component/package.json
@@ -1,6 +1,28 @@
 {
   "name": "@okam/next-component",
   "version": "0.4.1",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./index.d.ts",
+        "default": "./index.mjs"
+      },
+      "require": {
+        "types": "./index.d.ts",
+        "default": "./index.js"
+      }
+    },
+    "./server": {
+      "import": {
+        "types": "./server.d.ts",
+        "default": "./server.js"
+      },
+      "require": {
+        "types": "./server.d.ts",
+        "default": "./server.js"
+      }
+    }
+  },
   "publishConfig": {
     "access": "public"
   },
@@ -9,6 +31,9 @@
   },
   "dependencies": {
     "@okam/stack-ui": "1.31.1",
+    "@okam/core-lib": "1.16.0",
+    "react": "18.3.1",
+    "@tanstack/react-query": "^5.62.3",
     "next": "^14.1.1"
   }
 }
