--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -29,8 +29,8 @@
       "@okam/directus/directus-next": ["libs/directus/directus-next/src/index.ts"],
       "@okam/logger": ["libs/stack/logger/src/index.ts"],
       "@okam/next-component": ["libs/stack/next-component/src/index.ts"],
-      "@okam/stack-ui": ["libs/stack/stack-ui/src/index.ts"],
-      "@okam/stack-ui/server": ["libs/stack/stack-ui/src/server.ts"]
+      "@okam/next-component/server": ["libs/stack/next-component/src/server.ts"],
+      "@okam/stack-ui": ["libs/stack/stack-ui/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
