--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.2",
     "next": "^14.1.1",
+    "nuqs": "^2.4.1",
     "radashi": "^12.3.0",
     "react": "18.3.1",
     "react-aria": "^3.36.0",
