--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-aria/i18n": "^3.12.4",
     "@react-spring/web": "^9.7.5",
     "@react-types/shared": "^3.26.0",
+    "@storybook/react": "^8.4.7",
     "@tanstack/react-query": "^5.62.3",
     "@tiptap/core": "^2.10.3",
     "@tiptap/extension-blockquote": "^2.10.3",
