--- a/libs/stack/stack-ui/package.json
+++ b/libs/stack/stack-ui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@okam/stack-ui",
   "main": "./index.js",
-  "version": "1.35.2",
+  "version": "1.35.3",
   "types": "./index.d.ts",
   "exports": {
     ".": {
@@ -26,6 +26,7 @@
     "@okam/logger": "1.1.0",
     "react": "18.3.1",
     "react-aria": "^3.39.0",
-    "react-stately": "^3.37.0"
+    "react-stately": "^3.37.0",
+    "react-hook-form": "7.54.0"
   }
 }
