--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -26,6 +26,7 @@
       "@okam/directus-next-component/server": ["libs/directus/directus-next-component/src/server.ts"],
       "@okam/directus-next/server": ["libs/directus/directus-next/src/server.ts"],
       "@okam/directus-node": ["libs/directus/directus-node/src/index.ts"],
+      "@okam/directus-node/edge": ["libs/directus/directus-node/src/edge.ts"],
       "@okam/directus-query": ["libs/directus/directus-query/src/index.ts"],
       "@okam/directus/directus-next": ["libs/directus/directus-next/src/index.ts"],
       "@okam/logger": ["libs/stack/logger/src/index.ts"],
