--- a/libs/stack/next-component/package.json
+++ b/libs/stack/next-component/package.json
@@ -12,6 +12,7 @@
     "next": "^14.1.1",
     "react": "18.3.1",
     "react-use": "17.5.1",
-    "tailwind-variants": "^0.3.0"
+    "tailwind-variants": "^0.3.0",
+    "react-aria": "^3.39.0"
   }
 }
