--- a/libs/directus/directus-next/package.json
+++ b/libs/directus/directus-next/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@okam/core-lib": "1.17.0",
     "@okam/directus-node": "0.6.2",
+    "@okam/stack-ui": "1.39.3",
     "@okam/logger": "1.1.0",
     "next": "^14.1.1",
     "radashi": "^12.3.0",
