--- a/libs/stack/next-component/package.json
+++ b/libs/stack/next-component/package.json
@@ -12,6 +12,9 @@
     "next": "^14.1.1",
     "react": "18.3.1",
     "react-use": "17.5.1",
-    "tailwind-variants": "^0.3.0"
+    "tailwind-variants": "^0.3.0",
+    "react-stately": "^3.34.0",
+    "react-aria": "^3.36.0",
+    "nuqs": "^2.4.1"
   }
 }
