--- a/libs/directus/directus-next/package.json
+++ b/libs/directus/directus-next/package.json
@@ -40,7 +40,7 @@
     "@okam/directus-query": "1.4.2",
     "server-only": "0.0.1",
     "graphql-request": "7.1.2",
-    "server-only-context": "0.1.0",
-    "@graphql-typed-document-node/core": "3.2.0"
+    "@graphql-typed-document-node/core": "3.2.0",
+    "react": "18.3.1"
   }
 }
