--- a/libs/directus/directus-next/package.json
+++ b/libs/directus/directus-next/package.json
@@ -35,6 +35,7 @@
     "@okam/core-lib": "1.17.0",
     "@okam/directus-node": "0.6.2",
     "@okam/logger": "1.1.0",
+    "@okam/next-component": "1.1.5",
     "next": "^14.1.1",
     "radashi": "^12.3.0",
     "@okam/directus-query": "1.4.2",
