--- a/libs/stack/next-component/project.json
+++ b/libs/stack/next-component/project.json
@@ -9,23 +9,19 @@
       "executor": "@nx/eslint:lint"
     },
     "build": {
-      "executor": "@nx/rollup:rollup",
+      "executor": "@nx/vite:build",
       "outputs": ["{options.outputPath}"],
+      "defaultConfiguration": "production",
       "options": {
-        "outputPath": "dist/libs/stack/next-component",
-        "tsConfig": "libs/stack/next-component/tsconfig.lib.json",
-        "project": "libs/stack/next-component/package.json",
-        "entryFile": "libs/stack/next-component/src/index.ts",
-        "external": "all",
-        "rollupConfig": "@nx/react/plugins/bundle-rollup",
-        "compiler": "swc",
-        "assets": [
-          {
-            "glob": "libs/stack/next-component/README.md",
-            "input": ".",
-            "output": "."
-          }
-        ]
+        "outputPath": "dist/libs/stack/next-component"
+      },
+      "configurations": {
+        "development": {
+          "mode": "development"
+        },
+        "production": {
+          "mode": "production"
+        }
       }
     },
     "storybook": {
