--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "graphql-request": "^6.1.0",
     "isomorphic-dompurify": "1.13.0",
     "lodash.isequal": "4.5.0",
-    "next": "^14.0.4",
+    "next": "14.2.33",
     "radash": "11.0.0",
     "react": "^18.2.0",
     "react-aria": "^3.32.0",
@@ -55,7 +55,6 @@
     "@commitlint/cli": "18.4.3",
     "@commitlint/config-conventional": "18.4.3",
     "@graphql-eslint/eslint-plugin": "^3.20.1",
-    "@nx/cypress": "17.2.6",
     "@nx/eslint-plugin": "17.2.6",
     "@nx/jest": "17.3.0",
     "@nx/js": "17.3.0",
@@ -98,14 +97,12 @@
     "autoprefixer": "10.4.16",
     "babel-jest": "^29.7.0",
     "core-js": "^3.6.5",
-    "cypress": "^13.6.1",
     "eslint": "8.56.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "17.1.0",
     "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-cypress": "2.15.1",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-jest": "^27.6.0",
     "eslint-plugin-jest-formatting": "^3.1.0",
@@ -119,6 +116,7 @@
     "eslint-plugin-tailwindcss": "^3.13.0",
     "eslint-plugin-testing-library": "^6.2.0",
     "husky": "^8.0.3",
+    "is-ci": "^4.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
@@ -133,7 +131,6 @@
     "ts-jest": "^29.1.1",
     "ts-node": "10.9.2",
     "typescript": "5.3.3",
-    "verdaccio": "^5.29.0",
     "vite": "^5.0.10",
     "vite-plugin-dts": "~2.3.0",
     "vite-tsconfig-paths": "^4.2.2",
@@ -141,5 +138,13 @@
   },
   "nx": {
     "includedScripts": []
+  },
+  "resolutions": {
+    "axios": "^1.13.2",
+    "form-data": "^4.0.4",
+    "cipher-base": "^1.0.6",
+    "pbkdf2": "^3.1.3",
+    "@react-stately/flags": "^3.1.2",
+    "sha.js": "^2.4.12"
   }
 }
