--- a/libs/stack/next-component/package.json
+++ b/libs/stack/next-component/package.json
@@ -36,7 +36,8 @@
     "tailwind-variants": "^0.3.0",
     "react-aria": "^3.39.0",
     "react-stately": "^3.37.0",
-    "nuqs": "^2.4.1"
+    "nuqs": "^2.4.1",
+    "radashi": "^12.3.0"
   },
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0"
