--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "tailwind-variants": "^0.3.0",
     "tslib": "^2.8.1",
     "unlazy": "^0.12.1",
-    "usehooks-ts": "^3.1.0"
+    "usehooks-ts": "^3.1.0",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
