--- a/libs/stack/next-component/package.json
+++ b/libs/stack/next-component/package.json
@@ -31,7 +31,6 @@
   },
   "dependencies": {
     "@okam/stack-ui": "1.44.0",
-    "@tanstack/react-query": "^5.62.3",
     "@okam/core-lib": "1.17.0",
     "next": "^15.0.0",
     "react-use": "17.5.1",
@@ -39,8 +38,7 @@
     "react-aria": "^3.39.0",
     "react-stately": "^3.43.0",
     "nuqs": "^2.4.3",
-    "radashi": "^12.3.0",
-    "server-only": "^0.0.1"
+    "radashi": "^12.3.0"
   },
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
