--- a/libs/directus/directus-next/package.json
+++ b/libs/directus/directus-next/package.json
@@ -42,6 +42,7 @@
     "@okam/directus-query": "1.4.2",
     "graphql-request": "^7.1.2",
     "@graphql-typed-document-node/core": "3.2.0",
-    "zod": "^4.3.5"
+    "zod": "^4.3.5",
+    "server-only": "0.0.1"
   }
 }
