--- a/libs/directus/directus-flexible-content/package.json
+++ b/libs/directus/directus-flexible-content/package.json
@@ -29,7 +29,6 @@
     "react": "^18.0.0 || ^19.0.0"
   },
   "dependencies": {
-    "@nx/vite": "20.2.2",
     "@okam/directus-block": "2.0.0",
     "@okam/stack-ui": "2.0.0",
     "@tiptap/core": "^3.15.3",
@@ -40,10 +39,7 @@
     "@tiptap/extension-table-header": "^3.15.3",
     "@tiptap/extension-table-row": "^3.15.3",
     "@tiptap/extension-text-align": "^3.15.3",
-    "@tiptap/starter-kit": "^3.15.3",
-    "@vitejs/plugin-react": "4.3.4",
-    "vite": "^5.0.13",
-    "vite-plugin-dts": "~2.3.0"
+    "@tiptap/starter-kit": "^3.15.3"
   },
   "devDependencies": {
     "react": "^19.0.0"
